--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5d604c4",
+   "id": "d948fe68",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "af8b1fbe",
+   "id": "a03248a2",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "38176479",
+   "id": "84090d55",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "74edafa8",
+   "id": "c16844e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd0698b",
+   "id": "dab5da76",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "73bfeab8",
+   "id": "b1e16d89",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d76bf58",
+   "id": "e47482a9",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "00552d89",
+   "id": "d491f850",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a26f7979",
+   "id": "d122120b",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e169ff5",
+   "id": "d9750476",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -247,10 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d0c922be",
+   "execution_count": 16,
+   "id": "29aa0952",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string: hello 123 !?\n",
+      "digits = 3\n",
+      "vowels = 2\n",
+      "others = 7\n"
+     ]
+    }
+   ],
    "source": [
     "vowels = 0\n",
     "digits = 0\n",
@@ -263,7 +274,22 @@
     "        digits += 1\n",
     "    elif one_character in 'aeiou':\n",
     "        vowels += 1\n",
-    "    el"
+    "    else:\n",
+    "        others += 1\n",
+    "        \n",
+    "print(f'digits = {digits}')        \n",
+    "print(f'vowels = {vowels}')        \n",
+    "print(f'others = {others}')        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec3fb29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
    ]
   }
  ],
