--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d948fe68",
+   "id": "7e1e09ab",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a03248a2",
+   "id": "bdd417b2",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "84090d55",
+   "id": "4db8ea50",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c16844e1",
+   "id": "9257732f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dab5da76",
+   "id": "4b1dd8f1",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b1e16d89",
+   "id": "bc1f941a",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e47482a9",
+   "id": "53cf8463",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d491f850",
+   "id": "89f658b6",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d122120b",
+   "id": "f2ccba1e",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9750476",
+   "id": "8714579c",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "29aa0952",
+   "id": "abd7a509",
    "metadata": {},
    "outputs": [
     {
@@ -284,13 +284,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "d738939d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hooray!\n",
+      "Hooray!\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# earlier, I mentioned that if we try to iterate over an object that isn't iterable,\n",
+    "# we'll get an error\n",
+    "\n",
+    "# I'm in a great mood, because I'm teaching Python. I want to say \"Hooray!\" three times\n",
+    "\n",
+    "print('Hooray!')\n",
+    "print('Hooray!')\n",
+    "print('Hooray!')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2f7e618d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [18], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# then I realize I've violated the DRY rule -- I want to \"DRY up\" my code\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# I figure that I can iterate over 3, thus printing 3 times\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m counter \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;241m3\u001b[39m:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHooray!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "# then I realize I've violated the DRY rule -- I want to \"DRY up\" my code\n",
+    "\n",
+    "# I figure that I can iterate over 3, thus printing 3 times\n",
+    "\n",
+    "for counter in 3:       # this feels like it should work -- but it doesn't!\n",
+    "    print('Hooray!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2e0567c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hooray!\n",
+      "Hooray!\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for counter in range(3):       # if we use range(number), then we get that many iterations\n",
+    "    print('Hooray!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aec3fb29",
+   "id": "27f32c71",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# "
-   ]
+   "source": []
   }
  ],
  "metadata": {
