--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e1e09ab",
+   "id": "7056e679",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bdd417b2",
+   "id": "77360a34",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4db8ea50",
+   "id": "b3a40590",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9257732f",
+   "id": "22dba979",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b1dd8f1",
+   "id": "e5fbe48a",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bc1f941a",
+   "id": "9882775f",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53cf8463",
+   "id": "c90c0037",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "89f658b6",
+   "id": "0b91f293",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ccba1e",
+   "id": "1ea5c740",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8714579c",
+   "id": "5c3b99f0",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "abd7a509",
+   "id": "e0af01ea",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d738939d",
+   "id": "18b73e92",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2f7e618d",
+   "id": "38ba04aa",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2e0567c7",
+   "id": "65d7b055",
    "metadata": {},
    "outputs": [
     {
@@ -353,17 +353,45 @@
     }
    ],
    "source": [
+    "# iterate a number of times with range\n",
     "for counter in range(3):       # if we use range(number), then we get that many iterations\n",
     "    print('Hooray!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27f32c71",
+   "execution_count": 20,
+   "id": "c0065eba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Hooray!\n",
+      "1 Hooray!\n",
+      "2 Hooray!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what is \"counter\" in each iteration?\n",
+    "\n",
+    "for counter in range(3):   # range(3) gives us an iterable from 0 up to (and not including) 3 -- so, 3 times\n",
+    "    print(f'{counter} Hooray!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a52021",
+   "metadata": {},
+   "source": [
+    "When we say\n",
+    "\n",
+    "    thing.action()\n",
+    "    \n",
+    "that's known as a \"method call,\" which is very similar to a function call (i.e., executing a function). The difference is that methods are closely tied to particular types of objects. "
+   ]
   }
  ],
  "metadata": {
