--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7056e679",
+   "id": "32a89517",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "77360a34",
+   "id": "5730d8f8",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b3a40590",
+   "id": "acb778f1",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "22dba979",
+   "id": "46ec98f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5fbe48a",
+   "id": "ef42b74b",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9882775f",
+   "id": "c53da5c4",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c90c0037",
+   "id": "4c395ca4",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0b91f293",
+   "id": "4fdcc4b3",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ea5c740",
+   "id": "87c4902f",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c3b99f0",
+   "id": "1572393e",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e0af01ea",
+   "id": "7744645f",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "18b73e92",
+   "id": "419d69bf",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "38ba04aa",
+   "id": "712beaaf",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "65d7b055",
+   "id": "acec2a8b",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c0065eba",
+   "id": "79be76f1",
    "metadata": {},
    "outputs": [
     {
@@ -383,15 +383,63 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14a52021",
+   "id": "cba411d6",
    "metadata": {},
    "source": [
     "When we say\n",
     "\n",
     "    thing.action()\n",
     "    \n",
-    "that's known as a \"method call,\" which is very similar to a function call (i.e., executing a function). The difference is that methods are closely tied to particular types of objects. "
+    "that's known as a \"method call,\" which is very similar to a function call (i.e., executing a function). The difference is that methods are closely tied to particular types of objects. So you have string methods, list methods, dict methods, etc., and it's harder to mix them up.\n",
+    "\n",
+    "So when I say\n",
+    "\n",
+    "    s = '1234'\n",
+    "    if s.isdigit():  # here, we're running the isdigit() method on s, a string -- getting True/False\n",
+    "        print('Yes, s is an integer')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e13b7b46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# here, we'll get from 0 until (and not including 3)\n",
+    "for one_item in range(3):\n",
+    "    print(one_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6d696787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here, we'll get from 0 until (and not including) -3\n",
+    "for one_item in range(-3):\n",
+    "    print(one_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7914602e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
