--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32a89517",
+   "id": "5f0edafe",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5730d8f8",
+   "id": "2367d46b",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "acb778f1",
+   "id": "bc92a1f0",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "46ec98f3",
+   "id": "fe98d166",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef42b74b",
+   "id": "afd2148e",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c53da5c4",
+   "id": "2225bb50",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c395ca4",
+   "id": "4594c73c",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4fdcc4b3",
+   "id": "bdd23fc9",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87c4902f",
+   "id": "092ef0d2",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1572393e",
+   "id": "925a8827",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7744645f",
+   "id": "b1ea6552",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "419d69bf",
+   "id": "395b1e82",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "712beaaf",
+   "id": "061d4612",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "acec2a8b",
+   "id": "98cd97b7",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "79be76f1",
+   "id": "9819d6b2",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cba411d6",
+   "id": "65b449de",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e13b7b46",
+   "id": "ca69035d",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6d696787",
+   "id": "3b83db1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,11 +435,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "7aa3dae4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digits = 3\n",
+      "vowels = 2\n",
+      "others = 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the f before the opening quote means it's a \"format string\" or \"fancy string\"\n",
+    "# It's a regular string, except that inside, if you have {}, you can put variables\n",
+    "# or expressions (e.g., method calls)\n",
+    "\n",
+    "print(f'digits = {digits}')        \n",
+    "print(f'vowels = {vowels}')        \n",
+    "print(f'others = {others}')        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "40300a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(digits)\n",
+    "print(vowels)\n",
+    "print(others)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "855dda7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digits = 3\n",
+      "vowels = 2\n",
+      "others = 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can even do this:\n",
+    "\n",
+    "print(f'{digits = }')    # this prints digits = (the value of digits)\n",
+    "print(f'{vowels = }')    # this prints vowels = (the value of vowels)\n",
+    "print(f'{others = }')    # this prints others = (the value of others)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7914602e",
+   "id": "92bb0ed5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input('Enter your name: ')"
+   ]
   }
  ],
  "metadata": {
