--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f0edafe",
+   "id": "5fb4a0d8",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2367d46b",
+   "id": "aac34c9a",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bc92a1f0",
+   "id": "9bf2e45e",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fe98d166",
+   "id": "59c6a95a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd2148e",
+   "id": "fe199dcb",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2225bb50",
+   "id": "b830b31c",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4594c73c",
+   "id": "53fb0c3e",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bdd23fc9",
+   "id": "e7c7968f",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "092ef0d2",
+   "id": "d97df558",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "925a8827",
+   "id": "ad6f5e39",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b1ea6552",
+   "id": "543a3a89",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "395b1e82",
+   "id": "96c210f0",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "061d4612",
+   "id": "bf230f2a",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "98cd97b7",
+   "id": "8b53ac55",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9819d6b2",
+   "id": "1181cc52",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65b449de",
+   "id": "0cddc8f5",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ca69035d",
+   "id": "3c8db1b0",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3b83db1e",
+   "id": "2c1d541a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7aa3dae4",
+   "id": "79b2b38c",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "40300a5c",
+   "id": "3803cc8e",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "855dda7b",
+   "id": "bc001c6d",
    "metadata": {},
    "outputs": [
     {
@@ -507,12 +507,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "ac6a0da3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:      hello     \n",
+      "Hello,      hello     !\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input returns a string\n",
+    "# every string can run string methods\n",
+    "# one method is .strip(), which returns a new string without leading/trailing spaces\n",
+    "\n",
+    "name = input('Enter your name: ')\n",
+    "print(f'Hello, {name}!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "26a2aca2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:      Reuven    \n",
+      "Hello, Reuven!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name: ').strip()  # this ensures that name has no spaces at its start and end\n",
+    "print(f'Hello, {name}!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "92bb0ed5",
+   "id": "da7b77a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = input('Enter your name: ')"
+    "# in is an \"operator\"\n",
+    "# it returns True or False\n",
+    "# it always works as LITTLE in BIG\n",
+    "\n",
+    "# can a smaller string be found in a bigger string?\n",
+    "\n",
+    "'abc' in 'I like to sing a'"
    ]
   }
  ],
