--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5fb4a0d8",
+   "id": "e32588c9",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aac34c9a",
+   "id": "0d30abfe",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9bf2e45e",
+   "id": "05b4a0fb",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "59c6a95a",
+   "id": "25d09b27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe199dcb",
+   "id": "de885409",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b830b31c",
+   "id": "96f9c246",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53fb0c3e",
+   "id": "47f3343b",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e7c7968f",
+   "id": "f1c6fc8e",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d97df558",
+   "id": "72bd890b",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6f5e39",
+   "id": "e22f3438",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "543a3a89",
+   "id": "51e28805",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
     "\n",
     "s = input('Enter a string: ').strip()\n",
     "\n",
-    "for one_character in s:\n",
+    "for one_character in s.lower():\n",
     "    if one_character.isdigit():   # remember that one_character is a string! A string of length 1\n",
     "        digits += 1\n",
     "    elif one_character in 'aeiou':\n",
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "96c210f0",
+   "id": "170f9dc9",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bf230f2a",
+   "id": "be56c256",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8b53ac55",
+   "id": "50cd3d23",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1181cc52",
+   "id": "9bbefc17",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cddc8f5",
+   "id": "42447ccd",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3c8db1b0",
+   "id": "6881a89d",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2c1d541a",
+   "id": "fbd5688d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "79b2b38c",
+   "id": "82432924",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3803cc8e",
+   "id": "d479a387",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bc001c6d",
+   "id": "f0ae7a55",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ac6a0da3",
+   "id": "bc87dab4",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "26a2aca2",
+   "id": "45efa829",
    "metadata": {},
    "outputs": [
     {
@@ -551,10 +551,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da7b77a9",
+   "execution_count": 31,
+   "id": "8599ad1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# in is an \"operator\"\n",
     "# it returns True or False\n",
@@ -562,7 +573,63 @@
     "\n",
     "# can a smaller string be found in a bigger string?\n",
     "\n",
-    "'abc' in 'I like to sing a'"
+    "'abc' in 'I like to sing abc before bathtime'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e7d257ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'sing' in 'I like to sing abc before bathtime'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2c9a7200",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'sg' in 'I like to sing abc before bathtime'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63c95044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ask the user how many numbers they want to sum\n",
+    "\n",
+    "\n",
+    "\n",
+    "total = 0"
    ]
   }
  ],
