--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e32588c9",
+   "id": "80bc19a2",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0d30abfe",
+   "id": "43cd76d9",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "05b4a0fb",
+   "id": "94585451",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "25d09b27",
+   "id": "715abbd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de885409",
+   "id": "ceaec363",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "96f9c246",
+   "id": "a2430200",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f3343b",
+   "id": "9ac0bcf0",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f1c6fc8e",
+   "id": "a96430bd",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72bd890b",
+   "id": "23f1ff91",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e22f3438",
+   "id": "34283335",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "51e28805",
+   "id": "3c0ba831",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "170f9dc9",
+   "id": "c2027c42",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "be56c256",
+   "id": "e79ff674",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "50cd3d23",
+   "id": "9287f2d9",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9bbefc17",
+   "id": "7f80b0cd",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42447ccd",
+   "id": "2cb97b63",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6881a89d",
+   "id": "8a161bd9",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fbd5688d",
+   "id": "83e07133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "82432924",
+   "id": "f247850e",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d479a387",
+   "id": "8a6a336c",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f0ae7a55",
+   "id": "ca06660c",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bc87dab4",
+   "id": "90830654",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "45efa829",
+   "id": "8e08123a",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8599ad1d",
+   "id": "870c9f98",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e7d257ce",
+   "id": "4cb91bcd",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2c9a7200",
+   "id": "2f2bb4ba",
    "metadata": {},
    "outputs": [
     {
@@ -621,16 +621,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c95044",
+   "id": "e6a4391e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many numbers will you total? 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ask the user how many numbers they want to sum, then sum them\n",
+    "\n",
+    "total = 0\n",
+    "\n",
+    "s = input('How many numbers will you total? ').strip()\n",
+    "\n",
+    "# assume it's numeric\n",
+    "n = int(s)\n",
+    "\n",
+    "for counter in range(n):\n",
+    "    s = input(f'{counter} Enter number: ').strip()\n",
+    "    \n",
+    "    if s.isdigit():\n",
+    "        total += int(s)\n",
+    "    else:\n",
+    "        print(f'Ignoring {s}; not numeric')\n",
+    "        \n",
+    "print(f'{total=}')          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99cbc7ad",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Ask the user how many numbers they want to sum\n",
-    "\n",
-    "\n",
-    "\n",
-    "total = 0"
-   ]
+   "source": []
   }
  ],
  "metadata": {
