--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "80bc19a2",
+   "id": "df979ab7",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43cd76d9",
+   "id": "8aee3a47",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "94585451",
+   "id": "591b249d",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "715abbd3",
+   "id": "7912c81b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceaec363",
+   "id": "d163f77b",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a2430200",
+   "id": "a8062790",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac0bcf0",
+   "id": "b24947d8",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a96430bd",
+   "id": "42d89f60",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f1ff91",
+   "id": "8f510832",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34283335",
+   "id": "e186059c",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3c0ba831",
+   "id": "2b1cd57d",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c2027c42",
+   "id": "a50c0403",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e79ff674",
+   "id": "baf14efc",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9287f2d9",
+   "id": "e56608df",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7f80b0cd",
+   "id": "ee031f9a",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb97b63",
+   "id": "afe159f6",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8a161bd9",
+   "id": "34d1e385",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "83e07133",
+   "id": "8dc41c15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f247850e",
+   "id": "abc783f8",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8a6a336c",
+   "id": "4c623573",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ca06660c",
+   "id": "fd65db7c",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "90830654",
+   "id": "99324dd2",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8e08123a",
+   "id": "529a2a3b",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "870c9f98",
+   "id": "b08fae10",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4cb91bcd",
+   "id": "f6f50042",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2f2bb4ba",
+   "id": "e6c218ca",
    "metadata": {},
    "outputs": [
     {
@@ -620,15 +620,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e6a4391e",
+   "execution_count": 35,
+   "id": "0e329d18",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How many numbers will you total? 2\n"
+      "How many numbers will you total? 2\n",
+      "0 Enter number: 100\n",
+      "1 Enter number: 500\n",
+      "total=600\n"
      ]
     }
    ],
@@ -650,16 +653,21 @@
     "    else:\n",
     "        print(f'Ignoring {s}; not numeric')\n",
     "        \n",
-    "print(f'{total=}')          "
+    "print(f'total = {total}')          "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99cbc7ad",
+   "cell_type": "markdown",
+   "id": "d2537e24",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Name triangles\n",
+    "\n",
+    "1. Ask the user to enter their name.\n",
+    "2. Print a \"name triangle\" based on that name:\n",
+    "    - On the first line, print the 1st letter only\n",
+    "    - On the second line, print the 2nd letter only"
+   ]
   }
  ],
  "metadata": {
