--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7bfe6671",
+   "id": "2b87b7fd",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "01eb3d4e",
+   "id": "3d8ba923",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c030a1a4",
+   "id": "f7f27ebd",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "11b420ec",
+   "id": "296038b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f74128a",
+   "id": "b67c822e",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "695d4505",
+   "id": "d0f392bb",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b9543c2",
+   "id": "9dce196a",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6251fdb9",
+   "id": "fafee43b",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7a58595",
+   "id": "9948cb3f",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b73d52f",
+   "id": "3694c6f3",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fa1db088",
+   "id": "693afd5b",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "288538dc",
+   "id": "92dc8377",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "be10e63c",
+   "id": "f41cec04",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "13fddf3b",
+   "id": "576c2738",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1637cc45",
+   "id": "c6f5b63d",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31869ec0",
+   "id": "adb4059b",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8bec8003",
+   "id": "2cdf256c",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c9c3570e",
+   "id": "db3cfd67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "27aea7b1",
+   "id": "4d4d3344",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e9a05f10",
+   "id": "107117b0",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ea9d05d7",
+   "id": "2f1d9634",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2418833e",
+   "id": "3d295e59",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e1482691",
+   "id": "734e0182",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "de5d552b",
+   "id": "2f0e31b1",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3094478e",
+   "id": "4d6b8380",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9a8e3c80",
+   "id": "eb2376ba",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6d997305",
+   "id": "7c9dc0bb",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "522a383d",
+   "id": "7c4dc238",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -681,11 +681,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "f095c788",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R\n",
+      "Re\n",
+      "Reu\n",
+      "Reuv\n",
+      "Reuve\n",
+      "Reuven\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's think about what we want here\n",
+    "\n",
+    "name = 'Reuven'\n",
+    "\n",
+    "print(name[:1])   # first character\n",
+    "print(name[:2])   # first 2 characters\n",
+    "print(name[:3])   # first 3 characters\n",
+    "print(name[:4])   # first 4 characters\n",
+    "print(name[:5])   # first 5 characters\n",
+    "print(name[:6])   # first 6 characters"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bfe37af5",
+   "id": "1e06c959",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# name = 'Reuven'\n",
+    "# len(name) == 6\n",
+    "# range()\n",
+    "\n",
+    "for counter in range(len(name)):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
